BFS-service - DONE
