# internal/delivery/http/routes.go
@@ -23,7 +23,7 @@ func (h *httpDelivery) RegisterV1Routes() {
 	quicknode := api.PathPrefix("/quicknode").Subrouter()
 	quicknode.HandleFunc("/address/{walletAddress}/balance", h.addressBalance).Methods("GET")
 	
-	//quicknode
+	//nftExplorer
 	nftExplorer := api.PathPrefix("/nft-explorer").Subrouter()
 	nftExplorer.HandleFunc("/collections", h.collections).Methods("GET")
 	nftExplorer.HandleFunc("/collections/{contractAddress}", h.collectionDetail).Methods("GET")
@@ -32,7 +32,12 @@ func (h *httpDelivery) RegisterV1Routes() {
 	nftExplorer.HandleFunc("/collections/{contractAddress}/nfts/{tokenID}/content", h.collectionNftContent).Methods("GET")
 	nftExplorer.HandleFunc("/nfts", h.nfts).Methods("GET")
 	nftExplorer.HandleFunc("/owner-address/{walletAddress}/nfts", h.nftByWalletAddress).Methods("GET")
-
+	
+	//bfs services
+	bfsServices := api.PathPrefix("/bfs-service").Subrouter()
+	bfsServices.HandleFunc("/files/{walletAddress}", h.bfsFiles).Methods("GET")
+	bfsServices.HandleFunc("/browse/{walletAddress}", h.bfsBrowseFile).Methods("GET")
+	bfsServices.HandleFunc("/info/{walletAddress}", h.bfsFileInfo).Methods("GET")
 }
 
 func (h *httpDelivery) RegisterDocumentRoutes() {
